# hermes-fixer001

./: .env.example  .gitignore  README.md  deploy.sh  digest.sh  dispatch.sh  heartbeat.sh  pyproject.toml  run.sh
config/: repo_map.yaml  rules.yaml
src/inbox_watcher/: __main__.py  agentmail.py  auth.py  codex_runner.py  config.py  cursor.py  digest.py  dispatcher.py  findings.py  fixer.py  github_pr.py  gitops.py  ledger.py  prompt.py  repo_resolver.py  runner.py  types.py
tests/: conftest.py
tests/integration/: test_dispatch_flow.py  test_fixer_flow.py  test_full_run.py
tests/unit/: test_agentmail.py  test_auth.py  test_codex_runner.py  test_config.py  test_cursor.py  test_digest.py  test_dispatcher.py  test_findings.py  test_fixer.py  test_github_pr.py  test_gitops.py  test_ledger.py  test_prompt.py  test_repo_resolver.py  test_rules.py  test_runner.py
