[project]
name = "inbox-watcher"
version = "0.1.0"
description = "Polls the alert inbox via AgentMail, authenticates + classifies vendor alerts, posts a daily Slack digest."
requires-python = ">=3.11"
dependencies = [
    "agentmail>=0.1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "hermes-watcher-core>=0.1.2,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inbox_watcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.uv.sources]
hermes-watcher-core = { git = "https://github.com/webmaxlabs/hermes-watcher-core.git", tag = "v0.1.2" }
